--- a/index.html
+++ b/index.html
@@ -2,169 +2,117 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Moving Balls with Proximity Lines & Profile Overlay</title>
+<title>Saif Ahmad – Home</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-  /* --- Reset & layout -------------------------------------------------- */
-  html,body{margin:0;background:#000;overflow:hidden;font-family:system-ui, sans-serif;}
-  canvas{display:block;width:100vw;height:100vh;}
+  html, body { margin:0; padding:0; background:#000; color:#eee; font-family:system-ui, sans-serif; }
 
-  /* --- Profile overlay ------------------------------------------------- */
-  #profile{
-    position:absolute;
-    top:20px;left:20px;
-    display:flex;align-items:center;gap:12px;
-    background:rgba(0,0,0,0.6);
-    border-radius:12px;
-    padding:16px 20px;
-    backdrop-filter:blur(4px);
-    color:#fff;
-    box-shadow:0 4px 15px rgba(0,0,0,0.4);
-    max-width:80vw;
+  /* Top section with moving balls */
+  #canvas-container { position:relative; width:100%; height:500px; overflow:hidden; background:#000; }
+  #screen { position:absolute; top:0; left:0; width:100%; height:100%; }
+
+  /* Publications link top-right */
+  #top-nav { position:absolute; top:20px; right:20px; z-index:60; }
+  #top-nav a { color:#ffbf3c; text-decoration:none; font-weight:bold; background:rgba(0,0,0,0.6); padding:8px 12px; border-radius:4px; }
+
+  /* Centered profile + intro overlay */
+  #profile-intro {
+    position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);
+    background:rgba(0,0,0,0.6); padding:20px;
+    border-radius:12px; text-align:center;
+    backdrop-filter:blur(3px); box-shadow:0 4px 15px rgba(0,0,0,0.4);
+    color:#fff; max-width:80%; width:400px; z-index:50;
   }
-  #profile img{
-    width:80px;height:80px;
-    border-radius:50%;
-    object-fit:cover;
-    flex-shrink:0;
+  /* Profile row: image and info */
+  #profile-intro .profile-row {
+    display:flex; align-items:center; justify-content:center; gap:20px;
+    margin-bottom:16px;
   }
-  #profile h2{margin:0 0 4px;font-size:1.25rem;}
-  #profile p{margin:0;font-size:0.9rem;line-height:1.35;opacity:0.85;}
-  @media(max-width:480px){
-    #profile{flex-direction:column;align-items:flex-start;padding:12px;}
-    #profile img{width:64px;height:64px;}
+  #profile-intro img { width:120px; height:120px; border-radius:50%; object-fit:cover; }
+  #profile-intro .info {
+    text-align:left;
   }
+  #profile-intro .info h2 { margin:0; font-size:1.6rem; color:#ffbf3c;  }
+  #profile-intro .info p.title { margin:4px 0 0; font-size:1rem; opacity:0.85; }
+  #profile-intro .info p.sub { margin:2px 0 0; font-size:0.9rem; opacity:0.75; }
+
+  /* Intro text */
+  #profile-intro p.intro { margin:0; line-height:1.5; }
+
+  /* Content area below */
+  #content-container { max-width:800px; margin:20px auto; padding:20px; background:rgba(30,30,30,0.8); border-radius:8px; }
+  #content-container h2 { font-size:2rem; margin-bottom:0.5em; color:#ffbf3c; border-bottom:2px solid #ffbf3c; padding-bottom:0.3em; }
+  #content-container p, li { line-height:1.6; margin-bottom:0.8em; }
+  #content-container ul { padding-left:1.5em; }
+  #content-container section { margin-bottom:2.5em; }
 </style>
 </head>
 <body>
-<!-- Profile block (replace placeholders with your details) -->
-<div id="profile">
-  <img src="profile.jpg" alt="Your Photo" id="avatar" />
-  <div>
-    <h2>Saif Ahmad</h2>
-    <p>Postdoc Researcher, Power Systems, Energy Markets<br>Short bio or tagline goes here.</p>
+
+<div id="canvas-container">
+  <canvas id="screen"></canvas>
+  <div id="top-nav"><a href="publications.html">Publications</a></div>
+  <div id="profile-intro">
+    <div class="profile-row">
+      <img src="profile.jpg" alt="Saif Ahmad">
+      <div class="info">
+        <h2>Saif Ahmad</h2>
+        <p class="title">Postdoc Researcher</p>
+        <p class="sub">Aix Marseille Université, LIS Lab, CNRS<br>Marseille, France</p>
+      </div>
+    </div>
   </div>
 </div>
 
-<!-- Animation canvas -->
-<canvas id="screen"></canvas>
+<div id="content-container">
+  <section id="research">
+    <h2>Research Interests</h2>
+    <p>Rise in high-performance-compute data centres to train Large language Models will put enormous strain on the future electricity grids. Coupled with increased EV adoption and higher renewable penetration, these new technologies will fundamentally transform how we manage the grid, forcing us to innovate new solutions. I focus on leveraging the flexibility potential of aggregated electrical networks such as Virtual Power Plants and Microgrids to solve these problems. Below is a list (not comprehensive) of my current research interests:</p>
+    <ul>
+      <li>Distributed control and optimization algorithms for aggreageted ancillary services</li>
+      <li>Adaptive decentralised control for inverter based resources</li>
+      <li>Forecasting models for renewables and consumption using machine learning and AI tools</li>
+      <li>Optimal sizing for flexibility market participation</li>
+      <li> Emulating Transmission/Distribution network congestion</li>
+    </ul>
+  </section>
+  <section id="news">
+    <h2>News</h2>
+    <p>Our paper entitled "aaa"</p>
+  </section>
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:saifiitp16@gmail.com">saifiitp16@gmail.com</a></p>
+  </section>
+</div>
 
 <script>
-/* ------------- CONFIG -------------------------------------------------- */
-const BALL_COUNT       = 100;    // target number of balls on screen (steady‑state)
-
-// --- Ball appearance & motion
-const MIN_RADIUS       = 2;      // px — smallest ball
-const MAX_RADIUS       = 5;      // px — largest ball
-const MIN_SPEED        = 0.05;   // px / frame
-const MAX_SPEED        = 0.12;
-
-// --- Proximity‑line behaviour
-const NEIGHBOR_RADIUS  = 200;    // draw line when distance < this (px)
-const MAX_LINE_WIDTH   = 2;      // px — when two balls almost overlap
-
-// --- Population maintenance
-const RESPAWN_PROB     = 0.99;   // probability to spawn a new ball for each escaped ball
-
-// --- Colors
-const BALL_COLOR       = '#f59505';    // sun‑like deep yellow
-const LINE_COLOR_BASE  = [255, 200,  40]; // RGB base for lines (will blend alpha)
-/* ----------------------------------------------------------------------- */
-
-const cvs = document.getElementById('screen');
-const ctx = cvs.getContext('2d');
-
-function resize(){
-  cvs.width  = window.innerWidth;
-  cvs.height = window.innerHeight;
+// Canvas animation (unchanged)
+const BALL_COUNT=70,MIN_RADIUS=2,MAX_RADIUS=5,MIN_SPEED=0.05,MAX_SPEED=0.12,NEIGHBOR_RADIUS=180,MAX_LINE_WIDTH=2,RESPAWN_PROB=0.99;
+const BALL_COLOR='#f59505',LINE_COLOR_BASE=[255,200,40];
+const cvs=document.getElementById('screen'),ctx=cvs.getContext('2d');
+function resize(){ cvs.width=cvs.parentElement.clientWidth; cvs.height=cvs.parentElement.clientHeight; }
+window.addEventListener('resize',resize);resize();
+const rand=(a,b)=>Math.random()*(b-a)+a;
+function makeBallInside(){ const angle=rand(0,2*Math.PI), speed=rand(MIN_SPEED,MAX_SPEED), r=rand(MIN_RADIUS,MAX_RADIUS);
+  return { x: rand(r,cvs.width-r), y: rand(r,cvs.height-r), vx: Math.cos(angle)*speed, vy: Math.sin(angle)*speed, r };
 }
-window.addEventListener('resize', resize);
-resize();
-
-/* ---------- utilities -------------------------------------------------- */
-const rand = (a,b) => Math.random() * (b-a) + a;
-
-function makeBallInside(){
-  const angle = rand(0, Math.PI*2);
-  const speed = rand(MIN_SPEED, MAX_SPEED);
-  const radius = rand(MIN_RADIUS, MAX_RADIUS);
-  return {
-    r : radius,
-    x : rand(radius, cvs.width  - radius),
-    y : rand(radius, cvs.height - radius),
-    vx: Math.cos(angle) * speed,
-    vy: Math.sin(angle) * speed
-  };
-}
-
-function makeBallEntering(){
-  const edge  = Math.floor(Math.random()*4);   // 0-top 1-right 2-bottom 3-left
-  const speed = rand(MIN_SPEED, MAX_SPEED);
-  const radius= rand(MIN_RADIUS, MAX_RADIUS);
+function makeBallEntering(){ const edge=Math.floor(rand(0,4)), speed=rand(MIN_SPEED,MAX_SPEED), r=rand(MIN_RADIUS,MAX_RADIUS);
   let x,y,vx,vy;
-  switch(edge){
-    case 0: x = rand(radius, cvs.width-radius); y = -radius;                   vx = rand(-1,1)*speed; vy =  speed;  break;
-    case 1: x = cvs.width + radius;              y = rand(radius, cvs.height-radius); vx = -speed;          vy = rand(-1,1)*speed; break;
-    case 2: x = rand(radius, cvs.width-radius); y = cvs.height + radius;      vx = rand(-1,1)*speed; vy = -speed;  break;
-    default: x = -radius;                       y = rand(radius, cvs.height-radius); vx =  speed;          vy = rand(-1,1)*speed;
-  }
-  return {r:radius, x,y,vx,vy};
+  switch(edge){case 0:x=rand(r,cvs.width-r);y=-r;vx=rand(-1,1)*speed;vy=speed;break;
+    case 1:x=cvs.width+r;y=rand(r,cvs.height-r);vx=-speed;vy=rand(-1,1)*speed;break;
+    case 2:x=rand(r,cvs.width-r);y=cvs.height+r;vx=rand(-1,1)*speed;vy=-speed;break;
+    default:x=-r;y=rand(r,cvs.height-r);vx=speed;vy=rand(-1,1)*speed;}
+  return { x,y,vx,vy,r };
 }
-
-/* ---------- initialise population -------------------------------------- */
-let balls = Array.from({length:BALL_COUNT}, makeBallInside);
-
-/* ---------- main animation loop ---------------------------------------- */
-function step(){
-  ctx.clearRect(0,0,cvs.width,cvs.height);
-
-  /* --- 1. draw dynamic proximity lines -------------------------------- */
-  for(let i=0;i<balls.length;i++){
-    for(let j=i+1;j<balls.length;j++){
-      const a = balls[i], b = balls[j];
-      const dx = a.x - b.x, dy = a.y - b.y;
-      const distSq = dx*dx + dy*dy;
-      if (distSq < NEIGHBOR_RADIUS*NEIGHBOR_RADIUS){
-        const dist   = Math.sqrt(distSq);
-        const t      = dist / NEIGHBOR_RADIUS;          // 0 (close) → 1 (edge)
-        const width  = 1 + (1 - t) * (MAX_LINE_WIDTH-1);
-        const alpha  = 0.2 + (1 - t) * 0.8;
-
-        ctx.lineWidth   = width;
-        ctx.strokeStyle = `rgba(${LINE_COLOR_BASE[0]},${LINE_COLOR_BASE[1]},${LINE_COLOR_BASE[2]},${alpha})`;
-        ctx.beginPath();
-        ctx.moveTo(a.x, a.y);
-        ctx.lineTo(b.x, b.y);
-        ctx.stroke();
-      }
-    }
-  }
-
-  /* --- 2. draw & move balls ------------------------------------------- */
-  ctx.fillStyle = BALL_COLOR;
-  balls.forEach(b=>{
-    ctx.beginPath();
-    ctx.arc(b.x, b.y, b.r, 0, Math.PI*2);
-    ctx.fill();
-
-    b.x += b.vx;
-    b.y += b.vy;
-  });
-
-  /* --- 3. cull off‑screen balls & respawn ------------------------------ */
-  const next = [];
-  let escaped = 0;
-  balls.forEach(b=>{
-    const off = b.x < -b.r || b.x > cvs.width + b.r || b.y < -b.r || b.y > cvs.height + b.r;
-    if (off) escaped++; else next.push(b);
-  });
-  for(let i=0;i<escaped;i++){
-    if (Math.random() < RESPAWN_PROB) next.push( makeBallEntering() );
-  }
-  balls = next;
-
-  requestAnimationFrame(step);
-}
-requestAnimationFrame(step);
+let balls=Array.from({length:BALL_COUNT},makeBallInside);
+function step(){ ctx.clearRect(0,0,cvs.width,cvs.height);
+ balls.forEach((a,i)=>{for(let j=i+1;j<balls.length;j++){const b=balls[j],dx=a.x-b.x,dy=a.y-b.y,ds=dx*dx+dy*dy;
+    if(ds<NEIGHBOR_RADIUS*NEIGHBOR_RADIUS){const dist=Math.sqrt(ds),t=dist/NEIGHBOR_RADIUS;ctx.lineWidth=1+(1-t)*(MAX_LINE_WIDTH-1);ctx.strokeStyle=`rgba(${LINE_COLOR_BASE.join(',')},${0.2+(1-t)*0.8})`;ctx.beginPath();ctx.moveTo(a.x,a.y);ctx.lineTo(b.x,b.y);ctx.stroke();}}});
+ ctx.fillStyle=BALL_COLOR;balls.forEach(b=>{ctx.beginPath();ctx.arc(b.x,b.y,b.r,0,2*Math.PI);ctx.fill();b.x+=b.vx;b.y+=b.vy;});
+ let next=[],esc=0;balls.forEach(b=>{const off=b.x<-b.r||b.x>cvs.width+b.r||b.y<-b.r||b.y>cvs.height+b.r;off?esc++:next.push(b);} );
+ for(let i=0;i<esc;i++)if(Math.random()<RESPAWN_PROB)next.push(makeBallEntering());balls=next;
+ requestAnimationFrame(step);}requestAnimationFrame(step);
 </script>
 </body>
 </html>
