Update for publications and research intersts

--- a/index.html
+++ b/index.html
@@ -67,18 +67,20 @@
 <div id="content-container">
   <section id="research">
     <h2>Research Interests</h2>
-    <p>Rise in high-performance-compute data centres to train Large language Models will put enormous strain on the future electricity grids. Coupled with increased EV adoption and higher renewable penetration, these new technologies will fundamentally transform how we manage the grid, forcing us to innovate new solutions. I focus on leveraging the flexibility potential of aggregated electrical networks such as Virtual Power Plants and Microgrids to solve these problems. Below is a list (not comprehensive) of my current research interests:</p>
+    <p>Rise in high-performance-compute data centres to train Large Language Models will put enormous strain on the future electricity grids. Coupled with increased EV adoption and higher renewable penetration, these new technologies will fundamentally transform how we manage the grid, forcing us to innovate new solutions. I focus on leveraging the flexibility potential of aggregated electrical networks such as Virtual Power Plants and Microgrids to solve these problems. Below is a list (not comprehensive) of my current research interests:</p>
     <ul>
-      <li>Distributed control and optimization algorithms for aggreageted ancillary services</li>
+      <li>Distributed control and optimization algorithms for aggregated ancillary services</li>
       <li>Adaptive decentralised control for inverter based resources</li>
       <li>Forecasting models for renewables and consumption using machine learning and AI tools</li>
       <li>Optimal sizing for flexibility market participation</li>
-      <li> Emulating Transmission/Distribution network congestion</li>
+      <li>Robust adaptive control of renewable interfacing power converters</li>
     </ul>
   </section>
   <section id="news">
     <h2>News</h2>
-    <p>Our paper entitled "aaa"</p>
+    <p>July 2025 - Our paper "Coordinated Fast Frequency Regulation in Dynamic Virtual Power Plants via Disturbance Estimation" is accepted for presenttion in IECON 2025</p>
+<p>October 2024 - Our paper "Estimation-based Robust Switching Control of a DC-DC Boost Converter" is accepted for publication in IEEE Transactions on Industry Application</p>
+<p>July 2022 - My project "HiDCo4MVPP - Hierarchical Distributed Control for Marine Virtual Power Plant" is awarded Make our Planet Green Again Fellowship by the French government</p>
   </section>
   <section id="contact">
     <h2>Contact</h2>
