--- a/publications.html
+++ b/publications.html
@@ -40,6 +40,19 @@
 <body>
   <a href="index.html" class="back">← Back to Home</a>
   <h1>Publications</h1>
+  
+  <h2>Preprints</h2>
+  <ul>
+    <li>Ahmad, S., Ahmed, H. and BEN ELGHALI, S. (2025) <em>Coordinated Fast Frequency Regulation in Dynamic Virtual Power Plants via Disturbance Estimation</em>, 
+doi: 10.48550/arXiv.2507.06713
+</li>
+    <li>Ahmad, S. and Ahmed H. (2023). <em>Robust Intrusion Detection for Resilience Enhancement of Industrial Control Systems: An Extended State Observer Approach</em>, IEEE Transactions on Industry Application, doi: 10.1109/TIA.2023.3305361.</li>
+    <li>Ahmad, S., Abdulraheem, K.K., Tolokonsky, A.O. and Ahmed, H. (2023). <em>Active disturbance rejection control of pressurized water reactor</em>, Annals of Nuclear Energy, 189, 109845, doi: 10.1016/j.anucene.2023.109845.</li>
+    <li>Ahmad, S. and Ali, A. (2021). <em>On Active Disturbance Rejection Control in Presence of Measurement Noise</em>, IEEE Transactions on Industrial Electronics, 69(11), 11600-11610, doi: 10.1109/TIE.2021.3121754.</li>
+    <li>Ahmad, S. and Ali, A. (2021). <em>Unified Disturbance Estimation Based Control and Equivalence with IMC and PID: Case Study on a DC-DC Boost Converter</em>, IEEE Transactions on Industrial Electronics, 68(6), 5122-5132, doi: 10.1109/TIE.2020.2987269.</li>
+    <li>Ahmad, S. and Ali, A. (2019). <em>Active disturbance rejection control of DC–DC boost converter: a review with modifications for improved performance</em>, IET Power Electronics, 12(8), 2095-2107, doi: 10.1049/iet-pel.2018.5767.</li>
+  </ul>
+
 
   <h2>Journals</h2>
   <ul>
